update the descprition of secure_file_priv

--- a/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
+++ b/zh-CN/7.reference/3.database-object-management/2.manage-object-of-oracle-mode/1.manage-tables-of-oracle-mode/10.manage-external-tables-of-oracle-mode/2.create-a-external-table-of-oracle-mode.md
@@ -90,7 +90,7 @@ FORMAT = (
 
     * 对于使用本地 Location 格式的场景，在通过系统变量 `secure_file_priv` 配置 OceanBase 数据库有权限访问的文件路径时，要求 `secure_file_priv` 必须是 `local_file_path` 的上层目录，即 `local_file_path` 只能是 `secure_file_priv` 路径的子路径。
 
-       租户级系统变量 `secure_file_priv` 用于控制导入或导出到文件时，OceanBase 数据库可以访问的路径，默认为 `NULL`，表示导入、导出被禁用。有关 `secure_file_priv` 的详细介绍，请参见 [secure_file_priv](../../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md)。
+       租户级系统变量 `secure_file_priv` 用于控制导入或导出到文件时，OceanBase 数据库可以访问的路径。有关 `secure_file_priv` 的详细介绍，请参见 [secure_file_priv](../../../../8.configuration-items-and-system-variables/2.system-variable/3.global-system-variable/115.secure_file_priv-global.md)。
 
   * 远程 Location 格式：`LOCATION = '{oss|cos}://$ACCESS_ID:$ACCESS_KEY@$HOST/remote_file_path'`
 
