--- a/zh-CN/300.develop/200.application-development-of-oracle-mode/200.design-a-database-object-of-oracle-mode/200.create-a-table-of-oracle-mode.md
+++ b/zh-CN/300.develop/200.application-development-of-oracle-mode/200.design-a-database-object-of-oracle-mode/200.create-a-table-of-oracle-mode.md
@@ -412,24 +412,25 @@ partition P1 values  (2)) |
 +-----------+---------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------+
 1 row in set
 
-obclient [SYS]> SELECT table_name,partition_name,subpartition_name FROM USER_TAB_SUBPARTITIONS;
-+---------------+----------------+-------------------+
-| TABLE_NAME    | PARTITION_NAME | SUBPARTITION_NAME |
-+---------------+----------------+-------------------+
-| T_RANGE_RANGE | P0             | P0SMP1            |
-| T_RANGE_RANGE | P0             | P0SMP2            |
-| T_RANGE_RANGE | P0             | P0SMP3            |
-| T_RANGE_RANGE | P1             | P1SMP1            |
-| T_RANGE_RANGE | P1             | P1SMP2            |
-| T_RANGE_RANGE | P1             | P1SMP3            |
-| T_RANGE_RANGE | P2             | P2SMP1            |
-| T_RANGE_RANGE | P2             | P2SMP2            |
-| T_RANGE_RANGE | P2             | P2SMP3            |
-+---------------+----------------+-------------------+
-9 rows in set
+obclient [SYS]> SELECT table_name,partition_name,subpartition_name FROM USER_TAB_SUBPARTITIONS WHERE table_name = 'TBL5_M_LH';
++------------+----------------+-------------------+
+| TABLE_NAME | PARTITION_NAME | SUBPARTITION_NAME |
++------------+----------------+-------------------+
+| TBL5_M_LH  | P0             | P0SP0             |
+| TBL5_M_LH  | P0             | P0SP1             |
+| TBL5_M_LH  | P0             | P0SP2             |
+| TBL5_M_LH  | P0             | P0SP3             |
+| TBL5_M_LH  | P0             | P0SP4             |
+| TBL5_M_LH  | P1             | P1SP0             |
+| TBL5_M_LH  | P1             | P1SP1             |
+| TBL5_M_LH  | P1             | P1SP2             |
+| TBL5_M_LH  | P1             | P1SP3             |
+| TBL5_M_LH  | P1             | P1SP4             |
++------------+----------------+-------------------+
+10 rows in set
 ```
 
-示例 11 中，首先，使用 Hash 分区进行二次分区时未指定分区名，系统根据命名规则自动生成子分区定义 `p0、p1、p2、p3、p4`。然后，再根据模板化二级分区的命名规则，一级分区 `p0` 对应的分区名为 `p0smp1`、`p0smp2`、`p0smp3`。
+示例 11 中，首先，使用 Hash 分区进行二次分区时未指定分区名，系统根据命名规则自动生成子分区定义 `p0、p1、p2、p3、p4`。然后，再根据模板化二级分区的命名规则，一级分区 `p0` 对应的分区名为 `p0smp0`、`p0smp1`、`p0smp2`、`p0smp3`、`p0smp4`。
 
   <main id="notice" type='notice'>
     <h4>注意</h4>
