--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/3.deploy-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/3.deploy-ob-operator.md
@@ -19,7 +19,7 @@ helm install ob-operator ob-operator/ob-operator --namespace=oceanbase-system --
 
 ## 使用配置文件部署
 
-在 Kubernetes 环境中未安装 Helm，可通过使用配置文件的方式进行部署，使用配置文件进行部署 ob-operator 分为以下两种方式：
+如果您希望直接通过配置文件的方式部署，可使用以下两种方式部署 ob-operator：
 
 * 默认配置文件部署，则可以直接使用 GitHub 上的配置文件进行部署，具体命令如下：
 
