--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/1.create-tenant-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/1.create-tenant-of-ob-operator.md
@@ -132,7 +132,7 @@ spec:
 创建租户后，执行以下语句，查看当前 Kubernetes 集群中是否有新创建的租户的 Custom Resource，并且该 Custom Resource 的 Status.status 为 Running，相关配置都会在 Status 中展示。
 
 ```shell
-kubectl get tenants.cloud.oceanbase.com -A -o yaml
+kubectl get tenant -A -o yaml
 ```
 
 返回的示例结果如下：
