--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/2.modify-tenant-of-ob-operator/2.replica-management-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/2.modify-tenant-of-ob-operator/2.replica-management-of-ob-operator.md
@@ -46,7 +46,7 @@ Primary Zone 描述了 Leader 副本的偏好位置，而 Leader 副本承载了
 3. 执行以下语句，查看当前 Kubernetes 集群中租户的 Custom Resource，来判断是否修改成功。
 
     ```yaml
-    kubectl get tenants.cloud.oceanbase.com -A -o yaml
+    kubectl get tenant -A -o yaml
     ```
 
     当看到租户的 Custom Resource 中 `status:priority` 对应的值变为修改后的值，则说明修改成功。
@@ -265,7 +265,7 @@ Primary Zone 描述了 Leader 副本的偏好位置，而 Leader 副本承载了
 3. 执行以下语句，查看当前 Kubernetes 集群中租户的 Custom Resource。
 
     ```yaml
-    kubectl get tenants.cloud.oceanbase.com -A -o yaml
+    kubectl get tenant -A -o yaml
     ```
 
 ## 减少副本
@@ -447,5 +447,5 @@ Primary Zone 描述了 Leader 副本的偏好位置，而 Leader 副本承载了
 3. 执行以下语句，查看当前 Kubernetes 集群中租户的 Custom Resource。
 
     ```yaml
-    kubectl get tenants.cloud.oceanbase.com -A -o yaml
+    kubectl get tenant -A -o yaml
     ```
