--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/3.delete-tenant-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/3.delete-tenant-of-ob-operator.md
@@ -17,5 +17,5 @@ kubectl delete -f tenant.yaml
 如果不存在，则说明删除成功。
 
 ```shell
-kubectl get tenants.cloud.oceanbase.com -A -o yaml
+kubectl get tenant -A -o yaml
 ```
