--- a/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/2.modify-tenant-of-ob-operator/3.other-configuration-item-modifications-of-ob-operator.md
+++ b/zh-CN/7.reference/15.command-line-tools/14.ob-operator/5.ob-operator-user-guide/2.tenant-management-of-ob-operator/2.modify-tenant-of-ob-operator/3.other-configuration-item-modifications-of-ob-operator.md
@@ -27,7 +27,7 @@
 3. 执行以下语句，查看当前 Kubernetes 集群中租户的 Custom Resource，来判断是否修改成功。
 
     ```yaml
-    kubectl get tenants.cloud.oceanbase.com -A -o yaml
+    kubectl get tenant -A -o yaml
     ```
 
     当看到租户的 Custom Resource 中 `spec:connectWhiteList` 对应的值变为修改后的值，则说明修改成功。
