--- a/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/26.create-table-of-mysql-mode.md
+++ b/zh-CN/7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/26.create-table-of-mysql-mode.md
@@ -362,7 +362,8 @@ partition_count | subpartition_count:
      1 row in set 
      ```
 
-## 使用限制
+
+## MySQL 兼容模式 Private 临时表的使用限制
 
 MySQL 兼容模式下 Private 临时表暂无实际业务使用，使用风险较高，不推荐使用。
 
