--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/5.large-object-of-mysql-mode/2.blob-type-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/1.data-type-of-mysql-mode/5.large-object-of-mysql-mode/2.blob-type-of-mysql-mode.md
@@ -40,7 +40,7 @@ MEDIUMBLOB
 
 ## LONGBLOB
 
-`LONGBLOB` 是最大长度为 534773760 或 510 M 字节的 `BLOB` 类型。`LONGBLOB` 列的最大有效长度取决于客户端/服务器协议中配置的最大数据包大小和可用内存。
+`LONGBLOB` 是最大长度为 536870911 字节的 `BLOB` 类型。`LONGBLOB` 列的最大有效长度取决于客户端/服务器协议中配置的最大数据包大小和可用内存。
 
 `LONGBLOB` 语法如下：
 
