--- a/zh-CN/10.glossary.md
+++ b/zh-CN/10.glossary.md
@@ -282,7 +282,7 @@ OceanBase 数据库支持的副本类型如下表所示。
 
 系统根据一定的策略，通过动态调整 Unit 的位置和 Unit 内副本的位置，使得同一个 Zone 内所有 server 的资源使用率达到均衡的过程。负载均衡策略要考虑很多因素，目前分为两级调度。
 
-具体信息请参见本节 [Partition 调度](#partition-调度partition-scheduling) 和 [Unit 调度](#unit-调度unit-负载均衡) 的信息。
+具体信息请参见本节 **Partition 调度（Partition Scheduling）** 和 **Unit 调度（Unit Scheduling）** 的信息。
 
 ### 复制（Replication）
 
