--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/6.sql-optimization-practice-case.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/6.sql-optimization-practice-case.md
@@ -27,22 +27,22 @@
            ORDER BY cup_cnt DESC LIMIT 10;
    ```
 
-   查询得到 `SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476))` 类别 SQL 的执行频率和 CPU 使用率较高，而且集中于同一台 OBServer 节点上。
+   查询得到 `SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476))` 类别 SQL 的执行频率和 CPU 使用率较高大概为 75%（80 c/108 c），而且集中于同一台 OBServer 节点上。
 
    ```shell
    +----------------------------------+------------+--------------+--------------+---------+------------------------------------------------------------------------------------------------------------------------------------------------------+
    |       sql_id                     | executions | tot_cup_time | avg_cup_time | cup_cnt | query_sql      |
    +----------------------------------+------------+--------------+--------------+---------+------------------------------------------------------------------------------------------------------------------------------------------------------+
-   | 2705182A6EAB699CEC8E59DA80710B64 |   329196 |       33818182526  |     1443679  |      56  | SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476)) |
-   | 32AB97A0126F566064F84DDDF4936F82 |   275345 |       276913 |       1114496|       13 | SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476)) |
-   | A5F514E873BE9D1F9A339D0DA7481D69 |   154236 |       154873 |        3478098 |       10 | SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476)) |
-   | 31FD78420DB07C11C8E3154F1658D237 |      688 |       188973 |       20321589  |       1| SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476))  |
-   | C48AEE941D985D8DEB66892228D5E845 |     1137 |       288516 |       2839940 |       1| SELECT ... |
-   | 101B7B79DFA9AE801BEE4F1A234AD294 |       26 |       289585 |        1014516  |       1 | SELECT ... |
-   | 1D0BA376E273B9D622641124D8C59264 |       45 |       294356 |       2887948  |       1 | SELECT ... |
-   | 64CF75576816DB5614F3D5B1F35B1472 |      128 |       192843 |        811987 |       1 | SELECT ... |
-   | 23D1C653347BA469396896AD9B20DCA1 |       55 |       201594 |         41313078 |       1| SELECT ... |
-   | FA4F493FA5CE2DCC64F51CF3754F96C6 |      241 |       235720 |         1196261|       0 | SELECT ... |
+   | 2705182A6EAB699CEC8E59DA80710B64 |   23,425 |   33,818,182,526  |      1,443,679 |      56 | SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476)) |
+   | 32AB97A0126F566064F84DDDF4936F82 |    7,112 |     7,926.295,919 |      1,114,496 |      13 | SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476)) |
+   | A5F514E873BE9D1F9A339D0DA7481D69 |    4,046 |     6,053,872,739 |      1,496,261 |      10 | SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476)) |
+   | 31FD78420DB07C11C8E3154F1658D237 |      186 |       646,926,207 |      3,478,098 |       1 | SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476))  |
+   | C48AEE941D985D8DEB66892228D5E845 |       28 |       569,004,505 |     20,321,589 |       1 | SELECT ... |
+   | 101B7B79DFA9AE801BEE4F1A234AD294 |      155 |       440,190,675 |      2,839,940 |       1 | SELECT ... |
+   | 1D0BA376E273B9D622641124D8C59264 |      423 |       429,140,148 |      1,014,516 |       1 | SELECT ... |
+   | 64CF75576816DB5614F3D5B1F35B1472 |      113 |       326,338,159 |      2,887,948 |       1 | SELECT ... |
+   | 23D1C653347BA469396896AD9B20DCA1 |      381 |       309.367.170 |        811,987 |       1 | SELECT ... |
+   | FA4F493FA5CE2DCC64F51CF3754F96C6 |        7 |       289,191,515 |     41,313,074 |       0 | SELECT ... |
    +------------+----------------------------+--------------+------------+--------------+------------------------------------------------------------------------------------------------------------------------------------------------------+
    10 rows in set 
 
@@ -105,7 +105,7 @@
          range_key([TBL3.COL170(0x7f0cb0ffa210)], [TBL3.COL002(0x7f3f5b582c10)]), range(MIN,MIN ; MAX,MAX)always true // range: always true
    ```
 
-   根据上述 `EXPALIN` 信息，了解得到该条 SQL 的执行总代价估算为 432961，代价主要体现在 3 号算子 `UNION ALL` 部分（代价估算为 397629），`UNION ALL` 的两个分支都包含 `NESTED-LOOP JOIN`，代价估算分别为 151990 和 236327。`UNION ALL` 部分第一个分支（从 4 号到 11 号算子）的主要代价体现在 11 号算子上面，即通过索引 `TBL3(IDX_TBL3_COL170)` 进行 `TABLE SCAN`；第二个分支（从 12 号到 14 号算子）的主要代价也体现在 14 号算子上面，也是通过索引 `TBL3(IDX_TBL3_COL170)` 进行 `TABLE SCAN`。由此可见 11 号算子和 14 号算子代价偏高可能都是由于 `TBL3` 的索引导致的，初步定位出该案例中性能问题的瓶颈点。
+   根据上述 `EXPALIN` 信息，了解得到该条 SQL 的执行总代价估算为 432961，代价主要体现在 3 号算子 `UNION ALL` 部分（代价估算为 397629），`UNION ALL` 的两个分支都包含 `NESTED-LOOP JOIN`，代价估算分别为 151990 和 236327。`UNION ALL` 部分第一个分支（从 4 号到 11 号算子）的主要代价体现在 11 号算子上面，即通过索引 `TBL3(IDX_TBL3_COL170)` 进行 `TABLE SCAN`；第二个分支（从 12 号到 14 号算子）的主要代价体现在 14 号算子上面，也是通过索引 `TBL3(IDX_TBL3_COL170)` 进行 `TABLE SCAN`。由此可见 11 号算子和 14 号算子代价偏高可能都是由于 `TBL3` 的索引导致的，初步定位出该案例中性能问题的瓶颈点。
 
    接下来再分析 11 号算子和 14 号算子的 Outputs & filters 信息，其中 `range(MIN,MIN ; MAX,MAX)always true` 表明该 SQL执行过程中没有做索引匹配，而 `filter([20017476 = cast(cast(TBL3.COL170(0x7f0cb0ffa210), VARCHAR2(20 BYTE))(0x7f0cb1002fa0), NUMBER(-1, -85))(0x7f0cb1002770)(0x7f0cb1001c70)])` 表明在访问时发生了数据类型的转换，由此得知可能是关联字段的数据类型不统一而进行了数据类型的转换，导致了不可走索引。基于此结论再结合 DDL 定义做进一步的分析。
 
@@ -127,7 +127,7 @@
 
    接下来分析表 `TBL3` 的定义，可知索引 `TBL3(IDX_TBL3_COL170)` 定义于 `COL170` 字段，数据类型为 `VARCHAR2(20)`，而该字段就是视图 `V_TT01` 与其他表进行关联的字段。从视图 `V_TT01` 的定义可知，`UNION ALL` 第一个分支中，11 号算子对应的关联为 `"tbl3"."col170" = "tt01"."col001" = 20017476`, 第二个分支中 14 号算子对应的关联为 `"tbl3"."col170" = "tbl2"."col004" = 20017476`，由于关联字段数据类型不一致，所以发生了 `TO_NUMBER` 转换，即将 `COL170` 字段的 `VARCHAR2` 类型被强制转换为了 `NUMBER`。这与 11 号算子和 14 号算子的 Outputs & filters 中的 `filter` 信息相符合。
 
-   综合 DDL 信息和 `EXPALIN` 可知，该 SQL 执行过程中发生的 To_number 强制转换导致索引性能下降，是造成 11 号和 14 号算子的代价估算较大的原因。
+   综合 DDL 定义和 `EXPALIN` 信息可知，该类别 SQL 执行过程中发生的 To_number 强制转换导致索引性能下降，是造成 11 号和 14 号算子的代价估算较大的原因。
 
    ```sql
    /* 问题 SQL 的定义 */
@@ -135,7 +135,7 @@
        FROM   v_tt01
        WHERE  COL001 IN (20017476)；
 
-   /* 视图 V_AB01 的定义 */
+   /* 视图 V_TT01 的定义 */
    CREATE VIEW "V_TT01_OLD"
    AS
      (SELECT  
