--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/6.sql-optimization-practice-case.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/6.sql-optimization-practice-case.md
@@ -27,7 +27,7 @@
            ORDER BY cup_cnt DESC LIMIT 10;
    ```
 
-   查询得到 `SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476))` 类别 SQL 的执行频率和 CPU 使用率较高大概为 75%（80 c/108 c），而且集中于同一台 OBServer 节点上。
+   查询得到 `SELECT ... FROM V_TT01 WHERE (COL001 IN (20017476))` 类别 SQL 的执行频率和 CPU 使用率较高，大概为 80%（80 c/108 c），而且集中于同一台 OBServer 节点上。
 
    ```shell
    +----------------------------------+------------+--------------+--------------+---------+------------------------------------------------------------------------------------------------------------------------------------------------------+
