--- a/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/6.sql-optimization-practice-case.md
+++ b/zh-CN/7.reference/10.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/6.sql-optimization-practice-case.md
@@ -1,6 +1,6 @@
 # SQL 优化实践
 
-某客户数据库系统发生性能故障，发生大量交易拥堵的现象，直接原因是部分 OceanBase 数据库服务器节点的 CPU 使用率达到 100%，导致交易无法正常办理。通过查询 `GV$OB_SQL_AUDIT` 视图抓取信息进行分析，定位到一条问题 SQL 的平均耗时为 2s，并且该 SQL 总的 CPU 使用量超过该服务器节点 CPU 资源的 80%，结合相关表和视图的 DDL 定义确定影响性能的原因，经过一系列的 DDL 优化后，使得该 SQL 的 CPU 耗时降至 4 ms，彻底解决了性能瓶颈问题。
+某客户数据库系统发生性能故障，发生大量交易拥堵的现象，直接原因是部分 OceanBase 数据库服务器节点的 CPU 使用率达到 100%，导致交易无法正常办理。通过查询 `GV$OB_SQL_AUDIT` 视图抓取信息进行分析，定位到一条问题 SQL 的平均耗时为 2s，并且该 SQL 总的 CPU 使用量超过该服务器节点 CPU 资源的 80%，再结合 Explain 信息以及相关表和视图的 DDL 定义确定影响性能的原因，经过一系列的 DDL 优化后，使得该 SQL 的 CPU 耗时降至 4 ms，彻底解决了性能瓶颈问题。
 
 ## 排查思路
 
