--- a/zh-CN/4.deploy/3.deploy-oceanbase-enterprise-edition/4.deploy-through-the-command-line/2.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md
+++ b/zh-CN/4.deploy/3.deploy-oceanbase-enterprise-edition/4.deploy-through-the-command-line/2.deploy-the-oceanbase-cluster-command-line/2.deploy-the-quorum-high-availability-service.md
@@ -370,7 +370,7 @@ obclient [(none)]> SELECT * FROM oceanbase.DBA_OB_ARBITRATION_SERVICE;
 
 ### 步骤六：为 sys 租户开启仲裁服务
 
-可以在创建租户时即为租户开启仲裁服务，新建租户时为租户开启仲裁服务的详细信息，请参见 [CREATE TENANT](../../../../7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md)。
+可以在创建租户时即为租户开启仲裁服务，新建租户时为租户开启仲裁服务的详细信息，请参见 [CREATE TENANT](../../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md)。
 
 如果在创建租户时未开启仲裁服务，也可以待租户创建成功后，为租户开启仲裁服务。
 
@@ -442,12 +442,12 @@ Query OK, 0 rows affected
 
 ## 相关文档
 
-* [通过 OBClient 连接 OceanBase 租户](../../../../3.develop/1.application-development-of-mysql-mode/1.connect-to-oceanbase-database-of-mysql-mode/3.connect-to-an-oceanbase-tenant-by-using-obclient-of-mysql-mode.md)
-* [系统配置项总览](../../../../7.reference/8.configuration-items-and-system-variables/1.system-configuration-items/2.system-configuration-items-overview-list.md)
-* [ALTER USER](../../../../7.reference/5.sql-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md)
-* [ALTER TENANT](../../../../7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/5.alter-tenant.md)
+* [连接方式概述](../../../../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/1.connection-methods-overview-of-mysql-mode.md)
+* [系统配置项总览](../../../../7.reference/5.system-reference/1.system-configuration-items/2.system-configuration-items-overview-list.md)
+* [ALTER USER](../../../../7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/6.sql-statement-of-mysql-mode/18.alter-user-of-mysql-mode.md)
+* [ALTER TENANT](../../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/5.alter-tenant.md)
 * [用户租户介绍](../../../../6.manage/2.tenant-management/4.introduction-of-user-tenant.md)
-* [CREATE TENANT](../../../../7.reference/5.sql-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md)
+* [CREATE TENANT](../../../../7.reference/4.development-reference/1.sql-syntax/1.system-tenants/8.create-tenant.md)
 * [开启仲裁服务](../../../../6.manage/4.high-availability/4.arbitration-high-availability/2.enable-the-arbitration-service.md)
 * [关闭仲裁服务](../../../../6.manage/4.high-availability/4.arbitration-high-availability/3.disable-the-arbitration-service.md)
 * [修改降级超时时间](../../../../6.manage/4.high-availability/4.arbitration-high-availability/4.modify-the-degradation-timeout.md)
