--- a/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/2.use-dbcat-to-migrate-table-structure-from-mysql-database-to-oceanbase-database.md
+++ b/en-US/5.data-migration/2.migrate-data-from-mysql-database-to-oceanbase-database/2.use-dbcat-to-migrate-table-structure-from-mysql-database-to-oceanbase-database.md
@@ -126,7 +126,7 @@ Optional options:
 Run the following command to migrate the schemas of all objects from the test MySQL 5.7 database to a MySQL tenant of OceanBase Database V4.0.0. 
 
 ```bash
-bin/dbcat convert -H 11.161.xxx.xxx -P 3306 -uroot -pxxxxxx -D test --from mysql57 --to obmysql40 --all
+bin/dbcat convert -H 11.161.xxx.xxx -P 3306 -uroot -p****** -D test --from mysql57 --to obmysql40 --all
 ```
 
 Notice:
