--- a/en-US/6.manage/0.log-in-oceanbase-tenant.md
+++ b/en-US/6.manage/0.log-in-oceanbase-tenant.md
@@ -36,7 +36,7 @@ The main parameters are described as follows:
 
    * If you log in through a direct connection to an OBServer node, you must specify the username and tenant name in the `username@tenant name` format. For example,if you want to log on as the root user to the `sys` tenant of the `test` cluster, your account name is `root@sys`.
 
-* `-p`: password for logging in to the OceanBase Database. For a new cluster, the initial password for the root user of the `sys` tenant is empty. It is recommended to change the root user password using `alter user root identified by 'xxxxxx'` as the first step after creating a new cluster.
+* `-p`: password for logging in to the OceanBase Database. For a new cluster, the initial password for the root user of the `sys` tenant is empty. It is recommended to change the root user password using `alter user root identified by '******'` as the first step after creating a new cluster.
 
 For details about connecting to the OceanBase Database through the MySQL client, see [Connect to an OceanBase Database tenant by using a MySQL client](../3.develop/1.application-development-of-mysql-mode/1.database-connection-with-client-of-mysql-mode/2.connect-to-an-oceanbase-tenant-by-using-a-mysql-client-of-mysql-mode.md).
 
