--- a/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/6.information-functions-of-mysql-mode/6.current-user-of-mysql-mode.md
+++ b/en-US/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/4.functions-of-mysql-mode/6.information-functions-of-mysql-mode/6.current-user-of-mysql-mode.md
@@ -27,8 +27,8 @@ obclient> SELECT USER,HOST FROM mysql.USER ORDER BY USER,HOST;
 In a MySQL tenant, different combinations of usernames and host names are identified as different users. They can be granted different privileges. In the following example, the `SELECT` and `UPDATE` privileges are granted to the `testUser@192.168.%.%` user, and the `SELECT` privilege is granted to the `testUser@192.%.%.%` user.
 
 ```sql
-obclient> GRANT SELECT,UPDATE ON *.* TO testUser@192.168.%.% IDENTIFIED BY 'XXXXXX';
-obclient> GRANT SELECT ON *.* TO testUser@192.%.%.% IDENTIFIED BY 'XXXXXX';
+obclient> GRANT SELECT,UPDATE ON *.* TO testUser@192.168.%.% IDENTIFIED BY '******';
+obclient> GRANT SELECT ON *.* TO testUser@192.%.%.% IDENTIFIED BY '******';
 ```
 
 Log on to OceanBase Database as the `test` user, and execute `CURRENT_USER()`. Result:
