--- a/en-US/7.reference/7.command-line-tools/12.dooba.md
+++ b/en-US/7.reference/7.command-line-tools/12.dooba.md
@@ -21,7 +21,7 @@ Run the following command to use DOOBA:
 python dooba.py -h ODP address -u root@sys#cluster name -P ODP port number -p password
 
 // For example:
-python dooba.py -h xxx.xxx.xxx.xxx -u root@sys#obce-3zones -P 2883 -pxxxxxx
+python dooba.py -h xxx.xxx.xxx.xxx -u root@sys#obce-3zones -P 2883 -p******
 ```
 
 After you log on to DOOBA, you can use the following shortcut keys:
