--- a/zh-CN/7.reference/15.command-line-tools/12.dooba.md
+++ b/zh-CN/7.reference/15.command-line-tools/12.dooba.md
@@ -21,7 +21,7 @@ DOOBA 使用命令如下：
 python dooba.py -h ODP地址 -u root@sys#集群名 -P ODP端口 -p密码
 
 // 例如：
-python dooba.py -h xxx.xxx.xxx.xxx -u root@sys#obce-3zones -P 2883 -pxxxxxx
+python dooba.py -h xxx.xxx.xxx.xxx -u root@sys#obce-3zones -P 2883 -p******
 ```
 
 登录后常用的快捷键如下：
