--- a/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/13.for-update.md
+++ b/zh-CN/7.reference/3.performance-tuning-guide/5.sql-optimization/2.sql-execution-plan/2.execution-plan-operator/13.for-update.md
@@ -90,7 +90,7 @@ Query Plan:
 |0 |MATERIAL                    |    |10       |931 |
 |1 | MULTI FOR UPDATE           |    |10       |895 |
 |2 |  NESTED-LOOP JOIN CARTESIAN|    |10       |895 |
-|3 |   TABLE GET                |T2  |1        |52  |
+|3 |   TABLE SCAN               |T2  |1        |52  |
 |4 |   TABLE SCAN               |T1  |10       |836 |
 =====================================================
 Outputs & filters:
