fix  aone issue

--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/1100.alter-tablegroup-of-oracle-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/1100.alter-tablegroup-of-oracle-mode.md
@@ -2,90 +2,13 @@
 
 ## 描述
 
-该语句用来执行以下操作：
-
-* 对一个表组增加多张表。
-
-* 修改表组的分区规则。
-
-* 修改表组的 Locality 和 Primary Zone。
-
-* 添加和删除一级分区和二级分区。
-
-### 分区操作支持概览
-
-|    二级分区类型     | 添加一级分区 | 删除一级分区 | 添加二级分区 | 删除二级分区 |
-|---------------|--------|--------|--------|--------|
-| Range + Range | 支持     | 支持     | 支持     | 支持     |
-| Range + List  | 支持     | 支持     | 支持     | 支持     |
-| Range + Hash  | 支持     | 支持     | 不支持    | 不支持    |
-| List + Hash   | 支持     | 支持     | 不支持    | 不支持    |
-| List + Range  | 支持     | 支持     | 支持     | 支持     |
-| List + List   | 支持     | 支持     | 支持     | 支持     |
+该语句用来对一个表组增加多张表。
 
 ## 语法
 
-* 对一个表组增加多张表。
-
-  ```sql
-  ALTER TABLEGROUP tablegroup_name ADD [TABLE] table_name [, table_name...];
-  ```
-
-* 修改表组的分区规则。
-
-  ```sql
-  ALTER TABLEGROUP tablegroup_name alter_tg_partition_option;
-  
-  alter_tg_partition_option:
-    DROP PARTITION partition_name [, partition_name...]
-    | ADD PARTITION opt_range_partition_list
-    | modify_tg_partition_info
-  ```
-
-* 添加非模板一级分区。
-
-  ```sql
-  ALTER TABLEGROUP tablegroup_name ADD PARTITION partition_options;
-  
-  partition_options:
-    {partition_name VALUES LESS THAN range_partition_expr [tg_subpartition_option]}
-   |{partition_name VALUES list_partition_expr [tg_subpartition_option]}
-  
-  tg_subpartition_option：
-    {SUBPARTITION subpartition_name VALUES LESS THAN range_partition_expr, ...}
-   |{SUBPARTITION subpartition_name VALUES list_partition_expr, ....}
-   |{SUBPARTITION subpartition_name, ....}
-  ```
-
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>如果对二级分区表组添加一级分区时，必须添加该一级分区下的二级分区。</p>
-  </main>
-  
-* 添加非模板二级分区。
-
-  ```sql
-  ALTER TABLEGROUP tablegroup_name MODIFY PARTITION partition_name
-    ADD SUBPARTITION tg_subpartition_option;
-  
-  tg_subpartition_option：
-    {SUBPARTITION subpartition_name VALUES LESS THAN range_partition_expr, ...}
-   |{SUBPARTITION subpartition_name VALUES list_partition_expr, ...}
-  ```
-
-* 删除非模板一级分区。
-
-  ```sql
-  ALTER TABLEGROUP tablegroup_name
-  DROP PARTITION partition_name[,partition_name...] [UPDATE GLOBAL INDEXES];
-  ```
-
-* 删除非模板二级分区。
-
-  ```sql
-  ALTER TABLEGROUP tablegroup_name
-  DROP SUBPARTITION subpartition_name[,subpartition_name ...] [UPDATE GLOBAL INDEXES];
-  ```
+```sql
+ALTER TABLEGROUP tablegroup_name ADD [TABLE] table_name [, table_name...];
+```
 
 ## 参数解释
 
@@ -93,136 +16,18 @@
 |--------------------------------|--------------------------------------------------------------------------------------------------------|
 | tablegroup_name                | 指定表组。                                                                                                  |
 | table_name                     | 表名。对一个表组增加多张表时，表与表之间以逗号（，）分隔。 当添加多个表时，允许表名重复。如果待添加的表已经属于 `tablegroup_name` 的表格组，系统不报错。 |
-| DROP PARTITION                 | 删除一级分区。如果指定一级分区下存在二级分区，会同时删除该一级分区下的所有二级分区。                                                             |
-| ADD PARTITION                  | 添加一级分区。                                                                                                |
-| partition_name                 | 指定一级分区的名称。                                                                                             |
-| subpartition_name              | 指定二级分区的名称。                                                                                             |
-| modify_tg_partition_info       | 修改表组的分区规则。                                                                                             |
-| UPDATE GLOBAL INDEXES          | 该子句来决定是否需要对全局索引进行维护。该子句为可选项。                                                                           |
 
 ## 示例
 
-* 创建表组 `tblgroup1`,并创建两张关系表 `tbl1` 和 `tbl2`。
+创建表组 `tblgroup1`，并创建两张关系表 `tbl1` 和 `tbl2`。
 
-  ```sql
-  obclient> CREATE TABLEGROUP tblgroup1 PARTITION BY HASH PARTITIONS 10;
-  Query OK, 0 rows affected
+```sql
+obclient> CREATE TABLEGROUP tblgroup1 PARTITION BY HASH PARTITIONS 10;
+Query OK, 0 rows affected
   
-  obclient> CREATE TABLE tbl1(col1 INT, col2 INT) TABLEGROUP = tblgroup1 PARTITION BY HASH(col1) PARTITIONS 10;
-  Query OK, 0 rows affected
+obclient> CREATE TABLE tbl1(col1 INT, col2 INT) TABLEGROUP = tblgroup1  PARTITION BY HASH(col1) PARTITIONS 10;
+Query OK, 0 rows affected
   
-  obclient> CREATE TABLE tbl2(col1 INT, col2 INT) TABLEGROUP = tblgroup1 PARTITION BY HASH(col2) PARTITIONS 10;
-  Query OK, 0 rows affected
-  ```
-
-* 删除表组 `tblgroup2` 的 `p2` 分区。
-
-  ```sql
-  obclient> ALTER TABLEGROUP tblgroup2 DROP PARTITION p2;
-  Query OK, 0 rows affected 
-  
-  obclient> SHOW CREATE TABLEGROUP tblgroup2\G
-  *************************** 1. row ***************************
-         TABLEGROUP: TBLGROUP2
-  CREATE TABLEGROUP: CREATE TABLEGROUP "TBLGROUP2"  BINDING = FALSE
-    partition by range columns 1 subpartition by range columns 1
-  (partition P0 values less than (100) (
-  subpartition SP1 values less than (2019),
-  subpartition SP2 values less than (2020),
-  subpartition SP3 values less than (2021)),
-  partition P1 values less than (200) (
-  subpartition SP5 values less than (2019),
-  subpartition SP6 values less than (2020),
-  subpartition SP7 values less than (2021)))
-  1 row in set 
-  ```
-
-* 向表组 `tblgroup3` 添加 `p2` 分区。
-
-  ```sql
-  obclient> ALTER TABLEGROUP tblgroup3 ADD PARTITION p2 VALUES LESS THAN (300);
-  Query OK, 0 rows affected
-  
-  obclient> SHOW CREATE TABLEGROUP tblgroup3\G
-  *************************** 1. row ***************************
-         TABLEGROUP: TBLGROUP3
-  CREATE TABLEGROUP: CREATE TABLEGROUP "TBLGROUP3"  BINDING = FALSE
-    partition by range columns 1
-  (partition P0 values less than (100),
-  partition P1 values less than (200),
-  partition P2 values less than (300))
-  1 row in set
-  ```
-
-* 创建 Range Columns + Range Columns 非模板二级分区，并向表组中添加一级分区。
-
-  ```sql
-  obclient> CREATE TABLEGROUP tg1
-      PARTITION BY RANGE  1
-      SUBPARTITION BY RANGE  1
-      ( PARTITION p_2006_jul VALUES LESS THAN (TO_DATE('01-AUG-2006','dd-MON-yyyy'))
-        ( SUBPARTITION p06_jul_e VALUES LESS THAN (TO_DATE('15-AUG-2006','dd-MON-yyyy'))
-        , SUBPARTITION p06_jul_a VALUES LESS THAN (TO_DATE('01-SEP-2006','dd-MON-yyyy'))
-        , SUBPARTITION p06_jul_l VALUES LESS THAN (MAXVALUE)
-        )
-      , PARTITION p_2006_aug VALUES LESS THAN (TO_DATE('01-SEP-2006','dd-MON-yyyy'))
-        ( SUBPARTITION p06_aug_e VALUES LESS THAN (TO_DATE('15-SEP-2006','dd-MON-yyyy'))
-        , SUBPARTITION p06_aug_a VALUES LESS THAN (TO_DATE('01-OCT-2006','dd-MON-yyyy'))
-        , SUBPARTITION p06_aug_l VALUES LESS THAN (MAXVALUE)
-        )
-      , PARTITION p_2006_sep VALUES LESS THAN (TO_DATE('01-OCT-2006','dd-MON-yyyy'))
-        ( SUBPARTITION p06_sep_e VALUES LESS THAN (TO_DATE('15-OCT-2006','dd-MON-yyyy'))
-        , SUBPARTITION p06_sep_a VALUES LESS THAN (TO_DATE('01-NOV-2006','dd-MON-yyyy'))
-        , SUBPARTITION p06_sep_l VALUES LESS THAN (MAXVALUE)
-        )
-      , PARTITION p_2006_oct VALUES LESS THAN (TO_DATE('01-NOV-2006','dd-MON-yyyy'))
-        ( SUBPARTITION p06_oct_e VALUES LESS THAN (TO_DATE('15-NOV-2006','dd-MON-yyyy'))
-        , SUBPARTITION p06_oct_a VALUES LESS THAN (TO_DATE('01-DEC-2006','dd-MON-yyyy'))
-        , SUBPARTITION p06_oct_l VALUES LESS THAN (MAXVALUE)
-        )
-      , PARTITION p_2006_nov VALUES LESS THAN (TO_DATE('01-DEC-2006','dd-MON-yyyy'))
-        ( SUBPARTITION p06_nov_e VALUES LESS THAN (TO_DATE('15-DEC-2006','dd-MON-yyyy'))
-        , SUBPARTITION p06_nov_a VALUES LESS THAN (TO_DATE('01-JAN-2007','dd-MON-yyyy'))
-        , SUBPARTITION p06_nov_l VALUES LESS THAN (MAXVALUE)
-        )
-      , PARTITION p_2006_dec VALUES LESS THAN (TO_DATE('01-JAN-2007','dd-MON-yyyy'))
-        ( SUBPARTITION p06_dec_e VALUES LESS THAN (TO_DATE('15-JAN-2007','dd-MON-yyyy'))
-        , SUBPARTITION p06_dec_a VALUES LESS THAN (TO_DATE('01-FEB-2007','dd-MON-yyyy'))
-        , SUBPARTITION p06_dec_l VALUES LESS THAN (MAXVALUE)
-        )
-      );
-  Query OK, 0 rows affected
-  
-  obclient> ALTER TABLEGROUP tg1 ADD PARTITION p_2007_jan              
-      VALUES LESS THAN (TO_DATE('01-FEB-2007','dd-MON-yyyy'))
-                 ( SUBPARTITION p07_jan_e VALUES LESS THAN (TO_DATE('15-FEB-2007','dd-MON-yyyy'))
-                 , SUBPARTITION p07_jan_a VALUES LESS THAN (TO_DATE('01-MAR-2007','dd-MON-yyyy'))
-                 , SUBPARTITION p07_jan_l VALUES LESS THAN (TO_DATE('01-APR-2007','dd-MON-yyyy'))
-                 ) ;
-  Query OK, 0 rows affected
-  ```
-
-* 向表组中添加非模板 Range Columns + Range Columns 二级分区。
-
-  ```sql
-  obclient> ALTER TABLEGROUP tg1  MODIFY PARTITION p_2007_jan
-      ADD SUBPARTITION p07_jan_f VALUES LESS THAN (TO_DATE('01-JUN-2007','dd-MON-yyyy')),
-      SUBPARTITION p07_jan_vl VALUES LESS THAN (MAXVALUE);
-  Query OK, 0 rows affected
-  ```
-
-* 从表组中删除二级分区。
-
-  ```sql
-  obclient> ALTER TABLEGROUP tg1 drop subpartition p07_jan_e;
-  Query OK, 0 rows affected
-  ```
-
-* 从表组中删除一级分区。
-
-  ```sql
-  obclient> ALTER TABLEGROUP tg1 drop partition p_2007_jan; 
-  Query OK, 0 rows affected
-  ```
-
-有关创建分区的详细信息，请参见《OceanBase 数据库管理员指南》的 **管理分区** 章节。
+obclient> CREATE TABLE tbl2(col1 INT, col2 INT) TABLEGROUP = tblgroup1 PARTITION BY HASH(col2) PARTITIONS 10;
+Query OK, 0 rows affected
+```
