--- a/zh-CN/700.reference/100.oceanbase-database-concepts/700.user-interface-and-query-language/200.PL/100.pl-concepts/100.pl-of-oracle-mode/200.stored-procedure-of-oracle-mode.md
+++ b/zh-CN/700.reference/100.oceanbase-database-concepts/700.user-interface-and-query-language/200.PL/100.pl-concepts/100.pl-of-oracle-mode/200.stored-procedure-of-oracle-mode.md
@@ -23,7 +23,7 @@ END;
 
 ```sql
 CREATE [OR REPLACE] PROCEDURE Procedure_name
-[ (argment [ { IN | IN OUT }] Type,
+[ argment [ { IN | IN OUT }] Type,
       argment [ { IN | OUT | IN OUT } ] Type ]
     [ AUTHID DEFINER | CURRENT_USER ]
 { IS | AS }
@@ -42,6 +42,8 @@ obclient> CREATE TABLE loghistory
       (userid VARCHAR2(20), 
       logdate DATE DEFAULT SYSDATE);
 Query OK, 0 rows affected 
+
+obclient> DELIMITER /
 
 obclient> CREATE OR REPLACE PROCEDURE userlogin 
       IS
