--- a/zh-CN/700.reference/100.oceanbase-database-concepts/700.user-interface-and-query-language/200.PL/100.pl-concepts/200.pl-of-mysql-mode/200.stored-procedure-of-mysql-mode.md
+++ b/zh-CN/700.reference/100.oceanbase-database-concepts/700.user-interface-and-query-language/200.PL/100.pl-concepts/200.pl-of-mysql-mode/200.stored-procedure-of-mysql-mode.md
@@ -56,6 +56,7 @@ Query OK, 0 rows affected
 创建好的存储过程，需要使用 `CALL` 语句来调用，但是它不能作为 SQL 表达式的一部分被调用。
 
 ```sql
+obclient> DELIMITER /
 obclient> CALL citycount('JPN', @cities);/
 +--------+
 | cities |
