--- a/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/2500.create-tablegroup-of-oracle-mode.md
+++ b/zh-CN/700.reference/400.development-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/2500.create-tablegroup-of-oracle-mode.md
@@ -4,57 +4,24 @@
 
 该语句用来创建表组。
 
-OceanBase 数据库当前版本在创建非绑定的 TableGroup 时支持使用非模版二级分区，即允许将若干个非模版二级分区添加到 TableGroup 当中。
-
-  <main id="notice" type='explain'>
-    <h4>说明</h4>
-    <p>只有租户下的管理员权限才可以创建表组。</p>
-  </main>
-
 ## 语法
 
 ```sql
-CREATE TABLEGROUP tablegroup_name [opt_tg_partition_option]
-
-
-opt_tg_partition_option:
-PARTITION BY 
- HASH column_num [tg_subpartition_option] PARTITIONS int_num
-| RANGE [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
-| LIST [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES  list_partition_expr, ...}
-
-tg_subpartition_option:
-SUBPARTITION BY 
-RANGE [COLUMNS] column_num SUBPARTITION TEMPLATE {SUBPARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
-| HASH column_num [SUBPARTITIONS INTNUM]
-| LIST [COLUMNS] column_num SUBPARTITION TEMPLATE {SUBPARTITION partition_name VALUES  list_partition_expr, ...}
-```
-
-创建表组的非模版二级分区的语法如下：
-
-```sql
-CREATE TABLEGROUP  <tablegroup_name>  [opt_tg_partition_option] 
+CREATE TABLEGROUP  tablegroup_name [ PARTITION BY opt_tg_partition_option ] 
 
 opt_tg_partition_option:
- PARTITION BY 
- | HASH column_num [tg_subpartition_option] PARTITIONS int_num
- | RANGE [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
- | LIST [COLUMNS] column_num [tg_subpartition_option] {PARTITION partition_name VALUES list_partition_expr, ...}
-
-tg_subpartition_option:
- SUBPARTITION BY 
- | RANGE [COLUMNS] column_num SUBPARTITION {SUBPARTITION partition_name VALUES LESS THAN range_partition_expr, ...}
- | LIST [COLUMNS] column_num SUBPARTITION  {SUBPARTITION partition_name VALUES  list_partition_expr, ...}
- | HASH [SUBPARTITIONS int_num]
+ 
+      HASH [column_num] PARTITIONS int_num
+    | RANGE COLUMNS column_num {PARTITION partition_name VALUES LESS THAN range_partition_expr [, PARTITION partition_name VALUES LESS THAN range_partition_expr]...}
+    | LIST COLUMNS column_num {PARTITION partition_name VALUES list_partition_expr [, PARTITION partition_name VALUES list_partition_expr]...}
 ```
 
 ## 参数解释
 
-|             参数             |                                                                                                                                                                                                                   描述                                                                                                                                                                                                                    |
-|----------------------------|-----------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------------|
-| tablegroup_name            | 表组名称，最长 64 个字符，字符只能有大小写英文字母，数字和下划线，而且必须以字母或下划线开头，并且不能使用数据库的关键字。                                                                                                                                                                                                                                                                                                                                                                         |
-| opt_tablegroup_option_list | 表组的分区方式。 Locality 和 Primary Zone 必须和组内的表完全一致。组内的表信息不能独立变更某一项，只可以通过操作表组进行批量操作。 相同的 Locality 是指副本类型、个数和位置要完全一致。 相同的 Primary Zone 是指 Leader 位置及其优先级要完全一致。                                                                                                                                                                                                                                  |
-| opt_tg_partition_option    | 表组的分区规则定义，与 `CREATE TABLE` 使用同样的分区方式。 表组没有具体的列定义，所以 `HASH`、`RANGE` 和`LIST` 不需要写出具体的列，只需要指定列个数（`COLUMN_NUM`）。 相同的分区方式： <ul><li> 分区类型相同（例如，都是 Hash+Range 分区）。   </li><li> 如果是 Hash 分区，要求引用的列数相同，并且分区个数相同。   </li><li> 如果是 Range 分区，要求引用的列数相同，并且分区数相同，Range 分割点相同。    对于二级分区，根据其分区类型，要求和上述一致。</li></ul>  |
+|             参数             |         描述           |
+|----------------------------|------------------------|
+| tablegroup_name            | 表组名称，最长 64 个字符，字符只能有大小写英文字母，数字和下划线，而且必须以字母或下划线开头，并且不能使用数据库的关键字。  |
+| opt_tg_partition_option    | 表组的分区规则定义，与 `CREATE TABLE` 使用同样的分区方式。 表组没有具体的列定义，所以 `HASH`、`RANGE` 和`LIST` 不需要写出具体的列，只需要指定列个数（`COLUMN_NUM`）。 相同的分区方式： <ul><li> 分区类型相同（例如，都是 Hash+Range 分区）。   </li><li> 如果是 Hash 分区，要求引用的列数相同，并且分区个数相同。   </li><li> 如果是 Range 分区，要求引用的列数相同，并且分区数相同，Range 分割点相同。 对于二级分区，根据其分区类型，要求和上述一致。</li></ul>  |
 
 ## 示例
 
@@ -74,124 +41,42 @@ tg_subpartition_option:
 * 创建 Hash 分区的表组 `tblgroup2`，同时创建 Hash 分区的表 `tbl1` 和 `tbl2`，且分区个数相同。
 
   ```sql
-  obclient> CREATE TABLEGROUP tblgroup2 LOCALITY = 'F,R{ALL_SERVER}@zone1' partition by hash partitions 10;
+  obclient> CREATE TABLEGROUP tblgroup2  partition by hash partitions 10;
   Query OK, 0 rows affected
   
-  obclient> CREATE TABLE tbl1(col1 int, col2 int) TABLEGROUP = tblgroup2 LOCALITY = 'F,R{ALL_SERVER}@zone1' partition by hash(col1) partitions 10;
+  obclient> CREATE TABLE tbl1(col1 int, col2 int) TABLEGROUP = tblgroup2 partition by hash(col1) partitions 10;
   Query OK, 0 rows affected
   
-  obclient> CREATE TABLE tbl2(col1 int, col2 int) TABLEGROUP = tblgroup2 LOCALITY = 'F,R{ALL_SERVER}@zone1' partition by hash(col2) partitions 10;
+  obclient> CREATE TABLE tbl2(col1 int, col2 int) TABLEGROUP = tblgroup2  partition by hash(col2) partitions 10;
   Query OK, 0 rows affected
   ```
 
-### 创建模板二级分区表组
 
-* 创建 RANGE COLUMNS + RANGE COLUMNS 模式二级分区表组 `tblgroup3`。
+
+* 创建 Range Columns 分区的表组。
 
   ```sql
-  obclient> CREATE TABLEGROUP tblgroup3 PARTITION BY RANGE COLUMNS 1
-  SUBPARTITION BY RANGE  COLUMNS 1
-  SUBPARTITION TEMPLATE
-  (
-   SUBPARTITION rp1 VALUES LESS THAN (2019),
-   SUBPARTITION rp2 VALUES LESS THAN (2020),
-   SUBPARTITION rp3 VALUES LESS THAN (2021)
-  )
-  (
-   PARTITION p0 VALUES LESS THAN (100),
-   PARTITION p1 VALUES LESS THAN (200),
-   PARTITION p2 VALUES LESS THAN (300)
-  )
-  ;
+  obclient> CREATE TABLEGROUP tblgroup3 PARTITION BY RANGE COLUMNS 1 
+              ( PARTITION p0 VALUES LESS THAN(100),
+                PARTITION p1 VALUES LESS THAN(200)
+               );
   Query OK, 0 rows affected
   ```
 
-* 创建 RANGE COLUMNS + LIST COLUMNS 二级分区表组 `tblgroup4`。
+
+* 创建 List Columns 分区的表组。
 
   ```sql
-  obclient> CREATE TABLEGROUP tblgroup4 PARTITION BY RANGE COLUMNS 1
-  SUBPARTITION BY LIST COLUMNS 1
-  SUBPARTITION TEMPLATE
-  (
-   SUBPARTITION rp0 VALUES  ('00','01'),
-   SUBPARTITION rp1 VALUES  ('02','03'),
-   SUBPARTITION rp2 VALUES  ('04','05')
-  )
-  (
-   PARTITION p0 VALUES LESS THAN (2019),
-   PARTITION p1 VALUES LESS THAN (2020),
-   PARTITION p2 VALUES LESS THAN (2021)
-  );
+  obclient> CREATE TABLEGROUP tblgroup4 PARTITION BY LIST COLUMNS 1 
+              ( PARTITION p_northwest VALUES ('OR', 'WA'),
+                PARTITION p_southwest VALUES ('AZ', 'UT', 'NM')
+              );
   Query OK, 0 rows affected
   ```
 
-### 创建非模板二级分区表组
-
-* 创建 RANGE COLUMNS + RANGE COLUMNS 二级分区的表组 `tblgroup6`。
+* 创建 Hash 分区的表组。
 
   ```sql
-  obclient> CREATE TABLEGROUP tblgroup6 PARTITION BY RANGE COLUMNS 1
-    SUBPARTITION BY RANGE COLUMNS 1
-  (
-  PARTITION p0 VALUES LESS THAN (100)
-     (
-     SUBPARTITION sp0 VALUES LESS THAN (2018), 
-     SUBPARTITION sp1 VALUES LESS THAN (2019),
-     SUBPARTITION sp2 VALUES LESS THAN (2020),
-     SUBPARTITION sp3 VALUES LESS THAN (2021)
-     ),
-  PARTITION p1 VALUES LESS THAN (200)
-    ( 
-    SUBPARTITION sp4 VALUES LESS THAN (2018),
-    SUBPARTITION sp5 VALUES LESS THAN (2019),
-    SUBPARTITION sp6 VALUES LESS THAN (2020),
-    SUBPARTITION sp7 VALUES LESS THAN (2021)
-    )
-  );
-  Query OK, 0 rows affected
-  ```
-
-* 创建 RANGE COLUMNS + LIST COLUMNS 二级分区的表组 `tblgroup7`。
-
-  ```sql
-  obclient> CREATE TABLEGROUP tb1 PARTITION BY RANGE COLUMNS 1
-   SUBPARTITION BY LIST COLUMNS 1
-  (
-  PARTITION p0 VALUES LESS THAN (2019)
-    (SUBPARTITION p0sp0 VALUES ('00', '03'),
-     SUBPARTITION p0sp1 VALUES ('04', '06'),
-     SUBPARTITION p0sp2 VALUES ('07', '09')
-    ),
-  PARTITION p1 VALUES LESS THAN ( 2020)
-    (SUBPARTITION p1sp0 VALUES ('00', '03'),
-     SUBPARTITION p1sp1 VALUES ('04', '06'),
-     SUBPARTITION p1sp2 VALUES ('07', '09')
-    ),
-  PARTITION p2 VALUES LESS THAN (2021)
-    (SUBPARTITION p2sp0 VALUES ('00', '03'),
-     SUBPARTITION p2sp1 VALUES ('04', '06'),
-     SUBPARTITION p2sp2 VALUES ('07', '09'))
-   );
-  Query OK, 0 rows affected
-  ```
-
-* 创建 RANGE COLUMNS + Hash 二级分区的表组 `tblgroup8`。
-
-  ```sql
-  obclient> CREATE TABLEGROUP tblgroup8  PARTITION BY RANGE COLUMNS 1
-  SUBPARTITION BY HASH SUBPARTITIONS 1
-  (
-  PARTITION p0 VALUES LESS THAN (2020)
-    (
-     SUBPARTITION p0sp1, 
-     SUBPARTITION p0sp2
-     ),
-  PARTITION p1 VALUES LESS THAN (2021) 
-     (
-      SUBPARTITION p1sp1, 
-      SUBPARTITION p1sp2, 
-      SUBPARTITION p1sp3
-      )
-  ); 
+  obclient> CREATE TABLEGROUP tblgroup5 PARTITION BY HASH PARTITIONS 10;
   Query OK, 0 rows affected
   ```
