--- a/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/1.partition-overview-of-mysql-mode.md
+++ b/zh-CN/7.reference/2.administrator-guide/4.replica-management/2.manage-partition-table/2.mysql-mode/1.partition-overview-of-mysql-mode.md
@@ -101,9 +101,10 @@ Hash 分区适合于对不能用 Range 分区、List 分区方法的场景，它
 * 并行 DML、分区剪枝和分区连接等性能非常重要。
 
 Hash 分区的分区键必须是整数类型或 YEAR 类型，并且可以使用表达式。
+
 ### Key 分区
 
-Key 分区与 Hash 分区类似，也是通过对分区个数取模的方式来确定数据属于哪个分区，不同的是系统会对 Key 分区键做一个内部默认的 Hash 函数后再取模。
+Key 分区与 Hash 分区类似，也是通过对分区个数取模的方式来确定数据属于哪个分区。
 
 Key 分区有如下特点：
 
