--- a/en-US/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/100.data-type-overview-of-mysql-mode.md
+++ b/en-US/700.reference/400.development-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/100.data-type-overview-of-mysql-mode.md
@@ -18,9 +18,9 @@ In the current version, OceanBase Database supports the following MySQL data typ
 
 * [SET data type](../100.data-type-of-mysql-mode/700.set-type-of-mysql-mode.md)
 
-* [JSON data type](../1.data-type-of-mysql-mode/8.json-formatted-data-type-of-mysql-mode)
+* [JSON data type](800.json-formatted-data-type-of-mysql-mode/100.json-formatted-data-types-of-mysql-mode.md)
 
-* [Spatial data type](../1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode)
+* [Spatial data type](900.spatial-data-type-of-mysql-mode/100.spatial-data-type-overview-of-mysql-mode.md)
 
 OceanBase Database allows you to compare data of any two or more data types. Possible comparison results:
 
