--- a/zh-CN/300.develop/100.application-development-of-mysql-mode/400.write-data-of-mysql-mode/300.delete-data-of-mysql-mode-in-develop.md
+++ b/zh-CN/300.develop/100.application-development-of-mysql-mode/400.write-data-of-mysql-mode/300.delete-data-of-mysql-mode-in-develop.md
@@ -21,7 +21,7 @@
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <p>除了 <code>DELETE</code> 语句外，<code>REPLACE INTO</code> 语句也可能会删除数据，<code>REPLACE INTO</code> 语句相关的操作及示例请参见 <a href="../40000.write-data-of-mysql-mode/40000.replace-data-of-mysql-mode-in-develop.md">替换数据</a>。</p>
+    <p>除了 <code>DELETE</code> 语句外，<code>REPLACE INTO</code> 语句也可能会删除数据，<code>REPLACE INTO</code> 语句相关的操作及示例请参见 <a href="400.replace-data-of-mysql-mode-in-develop.md">替换数据</a>。</p>
   </main>
 
 简单的 `DELETE` 语句的语法格式如下：
