--- a/zh-CN/300.develop/200.application-development-of-oracle-mode/300.database-object-planning-of-oracle-mode/100.create-tablegroup-of-oracle-mode-in-develop.md
+++ b/zh-CN/300.develop/200.application-development-of-oracle-mode/300.database-object-planning-of-oracle-mode/100.create-tablegroup-of-oracle-mode-in-develop.md
@@ -50,7 +50,7 @@ CREATE TABLEGROUP tablegroup_name [tablegroup_option];
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p><ul><li>本文只是对 <code>CREATE TABLEGROUP</code> 语句进行了简要说明，如果需要了解详细的语法信息，请参见 <a href="../../../70000.reference/50000.sql-reference/10000.sql-syntax/30000.common-tenant-of-oracle-mode/90000.sql-statement-of-oracle-mode/10000.ddl-of-oracle-mode/250000.create-tablegroup-of-oracle-mode.md">CREATE TABLEGROUP</a>。</li><li>在本文示例中，都是用的 <code>CREATE TABLE</code> 指定 <code>TABLEGROUP</code> 把表添加进表组，您也可以使用 <a href="../../../700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/1100.alter-tablegroup-of-oracle-mode.md">ALTER TABLEGROUP</a> 语句把表添加进表组。</li></ul></p>
+  <p><ul><li>本文只是对 <code>CREATE TABLEGROUP</code> 语句进行了简要说明，如果需要了解详细的语法信息，请参见 <a href="../../../700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/2500.create-tablegroup-of-oracle-mode.md">CREATE TABLEGROUP</a>。</li><li>在本文示例中，都是用的 <code>CREATE TABLE</code> 指定 <code>TABLEGROUP</code> 把表添加进表组，您也可以使用 <a href="../../../700.reference/500.sql-reference/100.sql-syntax/300.common-tenant-of-oracle-mode/900.sql-statement-of-oracle-mode/100.ddl-of-oracle-mode/1100.alter-tablegroup-of-oracle-mode.md">ALTER TABLEGROUP</a> 语句把表添加进表组。</li></ul></p>
 </main>
 
 #### 示例 1
