--- a/zh-CN/300.develop/200.application-development-of-oracle-mode/500.read-data-of-oracle-mode/200.multi-table-join-query-of-oracle-mode/400.right-join-of-oracle-mode.md
+++ b/zh-CN/300.develop/200.application-development-of-oracle-mode/500.read-data-of-oracle-mode/200.multi-table-join-query-of-oracle-mode/400.right-join-of-oracle-mode.md
@@ -107,8 +107,8 @@ obclient> SELECT t1.id, t1.name, t2.id, t2.name FROM t1
 
 ## 相关文档
 
-* [INNER JOIN](../200.multi-table-join-query-of-oracle-mode/100.inner-join-of-oracle-mode.md)
+* [INNER JOIN](100.inner-join-of-oracle-mode.md)
 
-* [FULL JOIN](../200.multi-table-join-query-of-oracle-mode/200.full-join-of-oracle-mode.md)
+* [FULL JOIN](200.full-join-of-oracle-mode.md)
 
-* [LEFT JOIN](4.right-join-of-oracle-mode.md)
+* [LEFT JOIN](300.left-join-of-oracle-mode.md)
