--- a/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/200.environment-and-configuration-checks/100.view-resources-optional.md
+++ b/zh-CN/400.deploy/500.deploy-oceanbase-database-community-edition/200.local-deployment/200.environment-and-configuration-checks/100.view-resources-optional.md
@@ -1,7 +1,6 @@
 # （可选）查看资源
 
-如果您计划部署分布式 OceanBase 集群，建议您在部署 OceanBase 集群时，所有的机器使用相同的软硬件配置。详细信息请参考 [软硬件要求](../1.requirements-for-software-and-hardware.md
-)。
+如果您计划部署分布式 OceanBase 集群，建议您在部署 OceanBase 集群时，所有的机器使用相同的软硬件配置。详细信息请参考 [软硬件要求](../100.requirements-for-software-and-hardware.md)。
 
 如果您计划单机部署 OceanBase 数据库，可以跳过此步骤。
 
