--- a/zh-CN/600.manage/1100.emergency-response/300.common-emergency-response/200.problems-caused-by-capacity-changes/100.exceptions-caused-by-sql-queries.md
+++ b/zh-CN/600.manage/1100.emergency-response/300.common-emergency-response/200.problems-caused-by-capacity-changes/100.exceptions-caused-by-sql-queries.md
@@ -121,7 +121,7 @@ CREATE OUTLINE outline_name ON sql_id USING HINT /*+max_concurrent(1)*/;
 
 1. 通过 OCP 查找慢 SQL。
 
-   可以在 OCP 的 TOP SQL 页面查看最近一段时间耗时、执行次数最高的查询，从高到低进行排序，对于计划走错的 SQL直接在线绑定，具体操作请参见 [可疑 SQL 诊断](../2.problems-caused-by-capacity-changes/1.exceptions-caused-by-sql-queries.md)；对于需要限流的 SQL，需要结合业务研发的确认信息，定位可以进行限流的SQL。
+   可以在 OCP 的 TOP SQL 页面查看最近一段时间耗时、执行次数最高的查询，从高到低进行排序，对于计划走错的 SQL直接在线绑定；对于需要限流的 SQL，需要结合业务研发的确认信息，定位可以进行限流的SQL。
 
 2. 在命令行查找慢 SQL。
 
