--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/100.system-tenants/300.alter-resource-tenant.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/100.system-tenants/300.alter-resource-tenant.md
@@ -1,20 +1,16 @@
-ALTER RESOURCE TENANT
-=======================================
+# ALTER RESOURCE TENANT
 
-描述
------------------------
+## 描述-
 
 该语句用来修改租户资源池的配置。
 
-语法
------------------------
+## 语法
 
 ```sql
 ALTER RESOURCE TENANT tenant_name UNIT_NUM [=] unit_num [ DELETE UNIT_GROUP = ( id_list ) ]; 
 ```
 
-参数解释
--------------------------
+## 参数解释
 
 |  **参数**   |   **描述**   |
 |-----------|------------|
@@ -22,8 +18,7 @@ ALTER RESOURCE TENANT tenant_name UNIT_NUM [=] unit_num [ DELETE UNIT_GROUP = ( 
 | unit_num |修改租户下所有资源池的 Unit 个数。取值要小于等于对应 Zone 中的 OBServer 节点个数。 |
 | DELETE UNIT_GROUP | 仅用于缩容场景，删除 `id_list` 指定的 Unit Group。如果未指定该关键字，则随机删除一个 Unit Group。 |
 
-示例
------------------------
+## 示例
 
 * 修改租户 `tenant1` 下所有资源池的 Unit 个数为 3。
 
