--- a/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/100.data-type-overview-of-mysql-mode.md
+++ b/zh-CN/700.reference/500.sql-reference/100.sql-syntax/200.common-tenant-of-mysql-mode/100.basic-elements-of-mysql-mode/100.data-type-of-mysql-mode/100.data-type-overview-of-mysql-mode.md
@@ -18,9 +18,9 @@ OceanBase 数据库当前版本支持如下 MySQL 数据类型：
 
 * [集合类型](../100.data-type-of-mysql-mode/700.set-type-of-mysql-mode.md)
 
-* [JSON 数据类型](../1.data-type-of-mysql-mode/8.json-formatted-data-type-of-mysql-mode)
+* [JSON 数据类型](800.json-formatted-data-type-of-mysql-mode/100.json-formatted-data-types-of-mysql-mode.md)
 
-* [空间数据类型](../1.data-type-of-mysql-mode/9.spatial-data-type-of-mysql-mode)
+* [空间数据类型](900.spatial-data-type-of-mysql-mode/100.spatial-data-type-overview-of-mysql-mode.md)
 
 OceanBase 数据库允许任意两或多个任意类型的数据进行比较，比较结果可能如下：
 
