--- a/en-US/300.develop/100.application-development-of-mysql-mode/500.transaction-management-of-mysql-mode/100.transaction-management-overview-of-mysql-mode.md
+++ b/en-US/300.develop/100.application-development-of-mysql-mode/500.transaction-management-of-mysql-mode/100.transaction-management-overview-of-mysql-mode.md
@@ -41,7 +41,7 @@ In the CLI environment of `obclient`, you can execute a transaction control stat
 
 * [Start a transaction](../500.transaction-management-of-mysql-mode/200.start-a-transaction-of-mysql-mode.md)
 
-* [Mark a savepoint](../../../3.develop/1.application-development-of-mysql-mode/5.transaction-management-of-mysql-mode/300.transaction-savepoints-of-mysql-mode/100.mark-a-savepoint-of-mysql-mode.md)
+* [Mark a savepoint](300.transaction-savepoints-of-mysql-mode/100.mark-a-savepoint-of-mysql-mode.md)
 
 * [Commit a transaction](../500.transaction-management-of-mysql-mode/400.submit-transaction-of-mysql-mode.md)
 
