--- a/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/2.character-set-of-mysql-mode.md
+++ b/zh-CN/7.reference/4.development-reference/1.sql-syntax/2.common-tenant-of-mysql-mode/1.basic-elements-of-mysql-mode/3.character-set-and-collation-of-mysql-mode/2.character-set-of-mysql-mode.md
@@ -18,10 +18,7 @@ OceanBase 数据库目前支持如下字符集：
 
   <main id="notice" type='explain'>
     <h4>说明</h4>
-    <ul>
-    <li>为支持无缝迁移，OceanBase 数据库在语法上将 <code>UTF8</code> 视为 <code>UTF8MB4</code> 的同义词。</li>
-    <li>数据库字符集暂不支持修改。</li>
-    </ul>
+    <p>为支持无缝迁移，OceanBase 数据库在语法上将 <code>UTF8</code> 视为 <code>UTF8MB4</code> 的同义词。</p>
   </main>
 
 要显示可用的字符集，请使用如下 `SHOW CHARACTER SET` 语句。
