--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/2.horizontal-scaling-of-tenant-resources.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/2.horizontal-scaling-of-tenant-resources.md
@@ -1,14 +1,12 @@
 # 租户资源水平扩缩容
 
-租户资源的水平管理主要是通过调整资源池的 `UNIT_NUM` 来动态调整租户的可用资源。具体表现为，您可以通过调整资源池的 `UNIT_NUM` 来调整资源池下每个 Zone 内 Unit 数量，进而提高或降低该租户在对应 Zone 上的服务能力。OceanBase 数据库 V4.0 版本后，不再支持租户的多个 Resource Pool 的 Unit 数目异构。
+租户资源的水平管理主要是通过调整资源池的 `UNIT_NUM` 来动态调整租户的可用资源。具体表现为，您可以通过调整资源池的 `UNIT_NUM` 来调整资源池下每个 Zone 内 Unit 数量，进而提高或降低该租户在对应 Zone 上的服务能力。OceanBase 数据库 V4.0.0 版本后，不再支持租户的多个 Resource Pool 的 Unit 数目异构。
 
+`UNIT_NUM` 的变更如下：
 
-`UNIT_NUM` 的变更也分为两类，即调大 `UNIT_NUM` 和调小 `UNIT_NUM`：
+* 对于未授予租户的 Resource Pool，可以单独调大 Resource Pool 的 `UNIT_NUM`。
 
-* 对于未授予租户的 Resource Pool，可以单独调小或调大 Resource Pool 的 `UNIT_NUM`。
-
-
-* 对于已授予租户的 Resource Pool，只能同时调整所有已授予租户的 Resource Pool 的 `UNIT_NUM`，无法单独调整。此外，V4.0 暂不支持调小相关 Resource Pool 的 `UNIT_NUM`。
+* 对于已授予租户的 Resource Pool，只能同时调整所有已授予租户的 Resource Pool 的 `UNIT_NUM`，无法单独调整。此外，V4.x 暂不支持调小相关 Resource Pool 的 `UNIT_NUM`。
 
 调整资源池 `UNIT_NUM` 的示例语句如下：
 
