--- a/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/3.vertical-scaling-of-tenant-resources.md
+++ b/zh-CN/7.reference/1.oceanbase-database-concepts/5.distributed-database-objects/4.dynamic-scaling/2.scale-in-and-scale-out-of-tenant-resources/3.vertical-scaling-of-tenant-resources.md
@@ -85,6 +85,7 @@ obclient> ALTER RESOURCE POOL rp1 UNIT 'uc2';
 
 ```javascript
 Sum(min_cpu) <= CPU_CAPACITY;
+Sum(memory_size) <= MEM_CAPACITY;
 Sum(max_cpu) <= CPU_CAPACITY * resource_hard_limit;
 ```
 
