--- a/zh-CN/100.users-guide/1200.reference-guide/350.system-common-hidden-configuration-items/100.cluster-level-hidden-configuration-items/200._enable_easy_keepalive.md
+++ b/zh-CN/100.users-guide/1200.reference-guide/350.system-common-hidden-configuration-items/100.cluster-level-hidden-configuration-items/200._enable_easy_keepalive.md
@@ -6,7 +6,7 @@
 
 <main id="notice" type='explain'>
   <h4>说明</h4>
-  <p><code>dead_socket_detection_timeout</code> 用于设置检测失效 Socket 的时间间隔。详细描述请参见 <a href="../../1.system-configuration-items-1/3.cluster-level-configuration-items-1/53.dead_socket_detection_timeout-1.md">dead_socket_detection_timeout</a>。</p>
+  <p><code>dead_socket_detection_timeout</code> 用于设置检测失效 Socket 的时间间隔。详细描述请参见 <a href="../../300.system-configuration-items/5200.dead_socket_detection_timeout.md">dead_socket_detection_timeout</a>。</p>
 </main>
 
 默认值为 False，保证升级时新老版本兼容。  
