--- a/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/19300.oceanbase-dba_ob_tenants-of-mysql-mode.md
+++ b/zh-CN/700.reference/700.system-views/400.system-view-of-mysql-mode/200.dictionary-view-of-mysql-mode/19300.oceanbase-dba_ob_tenants-of-mysql-mode.md
@@ -35,3 +35,4 @@
 | ARBITRATION_SERVICE_STATUS |  varchar(64)   | NO | 租户的仲裁服务状态，取值如下：<ul><li>`ENABLING` 指开启中   </li><li> `ENABLED` 指开启完成</li><li> `DISABLING` 指关闭中</li><li>`DISABLED`  指关闭完成 </li></ul>|
 | UNIT_NUM | bigint(20) | NO | Zone 内 Unit 的数量<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
 | COMPATIBLE | varchar(65536) | NO | 兼容性版本<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
+| MAX_LS_ID  | bigint(20)     | NO | 租户曾经存在过的最大的日志流 ID。其中，系统租户和 Meta 租户为 1，用户租户为实际的大小。<main id="notice" type='explain'><h4>说明</h4><p>该字段从 V4.2.0 版本开始引入</p></main> |
